Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -68,6 +68,7 @@
     "adult": "Adult",
     "advanced": "Avançat",
     "age": "edat",
+    "agency": "Agència",
     "agent": "Agent",
     "agent-commission-info": "Només s'aplicarà a l'agent seleccionat",
     "agent-dont-have-associated-supplier": "L'agent no té un proveïdor associat",
@@ -175,6 +176,7 @@
     "blocked-date": "Data de bloqueig",
     "body": "Body",
     "book": "Reservar",
+    "booking": "Reserva",
     "box-closed-ok": "Caixa tancada correctament",
     "boxes": "Caixes",
     "browse": "Examinar",
@@ -475,6 +477,7 @@
     "description3": "Descripció 3",
     "design": "Disseny",
     "destination": "Destinació",
+    "destination-point": "Punt de destinació",
     "destination-warehouse": "Magatzem de destí",
     "detail": "Detall",
     "details": "Detalls",
@@ -803,6 +806,7 @@
     "in-progress": "En progrés",
     "in-stock": "En estoc",
     "inactive": "Inactiu",
+    "incidents": "Incidències",
     "income-and-expenses": "income and expenses",
     "incompatible-document": "Document incompatible: %code%. Per poder agrupar documents heu de tenir el mateix client o proveïdor, sèrie, magatzem, divisa i descomptes globals.",
     "incompatible-with-facturascripts": "Incompatible amb la versió %versio% de FacturaScripts",
@@ -1221,6 +1225,9 @@
     "php-support-end": "El suport per a PHP %current% acabarà aviat. Si us plau, actualitza PHP a la versió %min% o superior.",
     "php-version-too-new": "Es recomana utilitzar una versió de PHP entre %min_version% i %max_version%. Actualment tens la %version%",
     "physical-stock": "Estoc físic",
+    "pick-up-flight-id": "Vol de recollida",
+    "pick-up-flight-time": "Hora vol de recollida",
+    "pick-up-point": "Punt de recollida",
     "picking": "Picking",
     "plan": "Pla",
     "please-enter-value": "Si us plau, introduïu un valor per al camp",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "Cerca a totes les pàgines del programa",
     "search-message": "Buscar missatge",
     "search-product": "Cercar producte",
+    "seats": "Places",
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Seient desquadrat",
     "unchecked": "Sense comprovar",
     "under-minimums": "Sota mínims",
+    "underbook": "Subreserva",
     "undo": "Desfer",
     "unit": "Unidad",
     "unit-profit": "Guany unit.",
