--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -68,6 +68,7 @@
     "adult": "Dospělý",
     "advanced": "Pokročilé",
     "age": "stáří",
+    "agency": "Agencia",
     "agent": "Agente",
     "agent-commission-info": "Sólo se aplicará al agente seleccionado",
     "agent-dont-have-associated-supplier": "El agente no tiene un proveedor asociado",
@@ -175,6 +176,7 @@
     "blocked-date": "Fecha de bloqueo",
     "body": "Body",
     "book": "Reservar",
+    "booking": "Reserva",
     "box-closed-ok": "Caja cerrada correctamente",
     "boxes": "Cajas",
     "browse": "Procházet",
@@ -475,6 +477,7 @@
     "description3": "Descripción 3",
     "design": "Diseño",
     "destination": "Destino",
+    "destination-point": "Punto de destino",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Podrobnosti",
@@ -803,6 +806,7 @@
     "in-progress": "V průběhu",
     "in-stock": "En stock",
     "inactive": "Inactivo",
+    "incidents": "Události",
     "income-and-expenses": "Ingresos y Gastos",
     "incompatible-document": "Nekompatibilní dokument: %code%. Pro seskupení dokumentů musejí mít stejného klienta nebo dodavatele, sérii, sklad, měnu a celkovou slevu.",
     "incompatible-with-facturascripts": "Incompatible con la versión %version% de FacturaScripts",
@@ -1221,6 +1225,9 @@
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "php-version-too-new": "Doporučuje se používat verzi PHP mezi %min_version% a %max_version%. Aktuálně máte %version%.",
     "physical-stock": "Stock físico",
+    "pick-up-flight-id": "Vuelo de recogida",
+    "pick-up-flight-time": "Hora vuelo de recogida",
+    "pick-up-point": "Punto de recogida",
     "picking": "Vyřizování",
     "plan": "Plan",
     "please-enter-value": "Por favor, introduzca un valor para el campo",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Hledat zprávu",
     "search-product": "Buscar producto",
+    "seats": "Plazas",
     "second-hand": "Segunda mano",
     "second-quarter": "2. čtvrtletí",
     "second-trimester": "Segundo trimestre",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Nevyrovnaný záznam",
     "unchecked": "No comprobado",
     "under-minimums": "Bajo mínimos",
+    "underbook": "Subreserva",
     "undo": "Deshacer",
     "unit": "Unidad",
     "unit-profit": "Beneficio unit.",
