--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -68,6 +68,7 @@
     "adult": "Erwachsene",
     "advanced": "Avanzado",
     "age": "Alter",
+    "agency": "Agentur",
     "agent": "Agent",
     "agent-commission-info": "gilt nur für den ausgewählten Agenten",
     "agent-dont-have-associated-supplier": "der Agent hat keinen assoziierten Lieferanten",
@@ -175,6 +176,7 @@
     "blocked-date": "Gesperrt bei",
     "body": "Cuerpo",
     "book": "reservieren",
+    "booking": "Buchung",
     "box-closed-ok": "Karton richtig geschlossen",
     "boxes": "Boxen",
     "browse": "Durchsuchen",
@@ -475,6 +477,7 @@
     "description3": "Beschreibung 3",
     "design": "Design",
     "destination": "Ziel",
+    "destination-point": "Zielort",
     "destination-warehouse": "Ziellager",
     "detail": "Detail",
     "details": "Details",
@@ -803,6 +806,7 @@
     "in-progress": "In Bearbeitung",
     "in-stock": "auf Lager",
     "inactive": "inaktiv",
+    "incidents": "Vorfälle",
     "income-and-expenses": "Einnahmen und Ausgaben",
     "incompatible-document": "Inkompatibles Dokument",
     "incompatible-with-facturascripts": "Inkompatibel mit FacturaScripts %version%",
@@ -1101,7 +1105,7 @@
     "not-enough-stock": "Nicht genügend Lagerbestand von %reference%",
     "not-passed-integrity-check": "Einige Dateien haben die Integritätsprüfung nicht bestanden ... <br\/>Du kannst <a class='alert-link' target='_blank' href='IntegritySystemCheck'>hier weitere Details erhalten<\/a>.",
     "not-public": "Nicht öffentlich",
-    "not-registered": "No registrada",
+    "not-registered": "Nicht registriert",
     "not-sent": "Nicht gesendet",
     "not-stored-content": "Inhalt nicht gespeichert",
     "not-valid-email": "Ungültige E-Mail %email%",
@@ -1221,6 +1225,9 @@
     "php-support-end": "PHP-Endsupport",
     "php-version-too-new": "Es wird empfohlen, eine PHP-Version zwischen %min_version% und %max_version% zu verwenden. Derzeit haben Sie die Version %version%.",
     "physical-stock": "Physischer Bestand",
+    "pick-up-flight-id": "Abholflug-ID",
+    "pick-up-flight-time": "Abholzeit des Flugs",
+    "pick-up-point": "Abholpunkt",
     "picking": "Kommissionierung",
     "plan": "Planen",
     "please-enter-value": "Bitte einen Wert eingeben",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "In allen Seiten des Programms suchen",
     "search-message": "Nachricht suchen",
     "search-product": "Produkt suchen",
+    "seats": "Sitzplätze",
     "second-hand": "Z",
     "second-quarter": "Zweites Quartal",
     "second-trimester": "Zweites Trimester",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Ungebalancierte Buchung",
     "unchecked": "Nicht überprüft",
     "under-minimums": "Unterhalb der Mindestgrenzen",
+    "underbook": "Unterbuchung",
     "undo": "Rückgängig machen",
     "unit": "Einheit",
     "unit-profit": "Einheitsgewinn",
