--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -68,6 +68,7 @@
     "adult": "Adult",
     "advanced": "Advanced",
     "age": "Age",
+    "agency": "Agency",
     "agent": "Agent",
     "agent-commission-info": "It will only apply to the selected agent",
     "agent-dont-have-associated-supplier": "The agent don't have an associated supplier",
@@ -175,6 +176,7 @@
     "blocked-date": "Blocked at",
     "body": "Body",
     "book": "Reserve",
+    "booking": "Booking",
     "box-closed-ok": "Box closed ok",
     "boxes": "Boxes",
     "browse": "Search",
@@ -475,6 +477,7 @@
     "description3": "Description 3",
     "design": "Design",
     "destination": "Destination",
+    "destination-point": "Destination point",
     "destination-warehouse": "Destination warehouse",
     "detail": "Detail",
     "details": "Details",
@@ -528,9 +531,6 @@
     "editable": "Editable",
     "email": "E-mail",
     "email-bcc": "Email Blind Carbon Copy",
-    "email-logo": "Email logo",
-    "email-logo-create-error": "Unable to generate the email logo.",
-    "email-logo-offline-warning": "This installation uses a local address. The logo will not be visible in the emails.",
     "email-cc": "Email Carbon Copy",
     "email-not-configured": "Email not configured. You can configure the email from the administrator menu, email.",
     "email-not-sent": "Not sent",
@@ -797,9 +797,6 @@
     "image": "Image",
     "images": "Images",
     "images-added-correctly": "%count% images added correctly",
-    "image-create-error": "Unable to create the image.",
-    "image-convert-to-png-error": "Unable to convert the image to PNG.",
-    "image-not-valid-or-not-exist": "The selected image is not valid or does not exist.",
     "impacted-tax-re-subaccount": "Charged surcharge subaccount",
     "impacted-tax-subaccount": "Impacted tax subaccount",
     "import": "Import",
@@ -809,6 +806,7 @@
     "in-progress": "In progress",
     "in-stock": "In stock",
     "inactive": "Inactive",
+    "incidents": "Incidents",
     "income-and-expenses": "Income and Expenses",
     "incompatible-document": "Incompatible document: %code%. Different customer, supplier, currency or warehouse",
     "incompatible-with-facturascripts": "Incompatible with FacturaScripts %version%",
@@ -1227,6 +1225,9 @@
     "php-support-end": "Support for PHP %current% will end soon. Please update PHP to version %min% or higher.",
     "php-version-too-new": "It is recommended to use a PHP version between %min_version% and %max_version%. You currently have %version%.",
     "physical-stock": "Physical stock",
+    "pick-up-flight-id": "Pick up flight",
+    "pick-up-flight-time": "Pick-up flight time",
+    "pick-up-point": "Pick up point",
     "picking": "Picking",
     "plan": "Plan",
     "please-enter-value": "Please, enter a value",
@@ -1426,6 +1427,7 @@
     "search-in-all-pages": "Search across all pages of the program",
     "search-message": "Search message",
     "search-product": "Search product",
+    "seats": "Places",
     "second-hand": "Second hand",
     "second-quarter": "2nd Quarter",
     "second-trimester": "Second trimester",
@@ -1694,6 +1696,7 @@
     "unbalanced-entry": "Unbalanced entry",
     "unchecked": "Unchecked",
     "under-minimums": "Under minimums",
+    "underbook": "Underbook",
     "undo": "Undo",
     "unit": "Unit",
     "unit-profit": "Unit profit",
