--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -68,6 +68,7 @@
     "adult": "Adulto",
     "advanced": "Avanzado",
     "age": "edad",
+    "agency": "Agencia",
     "agent": "Agente",
     "agent-commission-info": "Sólo se aplicará al agente seleccionado",
     "agent-dont-have-associated-supplier": "El agente no tiene un proveedor asociado",
@@ -175,6 +176,7 @@
     "blocked-date": "Fecha de bloqueo",
     "body": "Body",
     "book": "Reservar",
+    "booking": "Reserva",
     "box-closed-ok": "Caja cerrada correctamente",
     "boxes": "Cajas",
     "browse": "Examinar",
@@ -475,6 +477,7 @@
     "description3": "Descripción Nivel 3",
     "design": "Diseño",
     "destination": "Destino",
+    "destination-point": "Punto de destino",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Detalles",
@@ -803,6 +806,7 @@
     "in-progress": "En progreso",
     "in-stock": "En stock",
     "inactive": "Inactivo",
+    "incidents": "Incidencias",
     "income-and-expenses": "Ingresos y Gastos",
     "incompatible-document": "Documento incompatible: %code%. Para poder agrupar documentos deben tener el mismo cliente o proveedor, serie, almacén, divisa y descuentos globales.",
     "incompatible-with-facturascripts": "Incompatible con la versión %version% de FacturaScripts",
@@ -1221,6 +1225,9 @@
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "php-version-too-new": "Se recomienda usar una versión de PHP entre la %min_version% y la %max_version%. Actualmente tienes la %version%",
     "physical-stock": "Stock físico",
+    "pick-up-flight-id": "Vuelo de recogida",
+    "pick-up-flight-time": "Hora vuelo de recogida",
+    "pick-up-point": "Punto de recogida",
     "picking": "Picking",
     "plan": "Plan",
     "please-enter-value": "Por favor, introduzca un valor para el campo",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Buscar mensaje",
     "search-product": "Buscar producto",
+    "seats": "Plazas",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "No comprobado",
     "under-minimums": "Bajo mínimos",
+    "underbook": "Subreserva",
     "undo": "Deshacer",
     "unit": "Unidad",
     "unit-profit": "Beneficio unit.",
