--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -68,6 +68,7 @@
     "adult": "Adulto",
     "advanced": "Avanzado",
     "age": "edad",
+    "agency": "Agencia",
     "agent": "Agente",
     "agent-commission-info": "Sólo se aplicará al agente seleccionado",
     "agent-dont-have-associated-supplier": "El agente no tiene un proveedor asociado",
@@ -175,6 +176,7 @@
     "blocked-date": "Fecha de bloqueo",
     "body": "Body",
     "book": "Reservar",
+    "booking": "Reserva",
     "box-closed-ok": "Caja cerrada correctamente",
     "boxes": "Cajas",
     "browse": "Examinar",
@@ -475,6 +477,7 @@
     "description3": "Descripción 3",
     "design": "Diseño",
     "destination": "Destino",
+    "destination-point": "Punto de destino",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Detalles",
@@ -528,9 +531,6 @@
     "editable": "Editable",
     "email": "Email",
     "email-bcc": "Email con copia oculta",
-    "email-logo": "Logotipo del email",
-    "email-logo-create-error": "No se ha podido generar el logotipo del email.",
-    "email-logo-offline-warning": "Instalación local detectada, el logo probablemente no sea visible en los emails.",
     "email-cc": "Email con copia",
     "email-not-configured": "Email no configurado. Puedes configurar el email desde el menú administrador, email.",
     "email-not-sent": "No enviado",
@@ -797,9 +797,6 @@
     "image": "Imagen",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
-    "image-create-error": "No se ha podido crear la imagen.",
-    "image-convert-to-png-error": "No se ha podido convertir la imagen a PNG.",
-    "image-not-valid-or-not-exist": "La imagen seleccionada no es válida o no existe.",
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Subcuenta impuesto repercutido",
     "import": "Importar",
@@ -809,6 +806,7 @@
     "in-progress": "En progreso",
     "in-stock": "En stock",
     "inactive": "Inactivo",
+    "incidents": "Incidencias",
     "income-and-expenses": "Ingresos y Gastos",
     "incompatible-document": "Documento incompatible: %code%. Para poder agrupar documentos deben tener el mismo cliente o proveedor, serie, almacén, divisa y descuentos globales.",
     "incompatible-with-facturascripts": "Incompatible con la versión %version% de FacturaScripts",
@@ -1227,6 +1225,9 @@
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "php-version-too-new": "Se recomienda usar una versión de PHP entre la %min_version% y la %max_version%. Actualmente tienes la %version%",
     "physical-stock": "Stock físico",
+    "pick-up-flight-id": "Vuelo de recogida",
+    "pick-up-flight-time": "Hora vuelo de recogida",
+    "pick-up-point": "Punto de recogida",
     "picking": "Picking",
     "plan": "Plan",
     "please-enter-value": "Por favor, introduzca un valor para el campo",
@@ -1426,6 +1427,7 @@
     "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Buscar mensaje",
     "search-product": "Buscar producto",
+    "seats": "Plazas",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
@@ -1694,6 +1696,7 @@
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "No comprobado",
     "under-minimums": "Bajo mínimos",
+    "underbook": "Subreserva",
     "undo": "Deshacer",
     "unit": "Unidad",
     "unit-profit": "Beneficio unit.",
