--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -68,6 +68,7 @@
     "adult": "Heldua",
     "advanced": "Aurreratua",
     "age": "adina",
+    "agency": "Agentzia",
     "agent": "Agentea",
     "agent-commission-info": "Aukeratutako agenteari bakarrik eragingo dio",
     "agent-dont-have-associated-supplier": "Agenteak ez du hornitzale bat lotuta",
@@ -175,6 +176,7 @@
     "blocked-date": "Blokeo data",
     "body": "Gorputza",
     "book": "Erreserbatu",
+    "booking": "Erreserba",
     "box-closed-ok": "Kutxa ondo itxita",
     "boxes": "Kutxak",
     "browse": "Lanatu",
@@ -475,6 +477,7 @@
     "description3": "3. deskribapena",
     "design": "Diseinua",
     "destination": "Helmuga",
+    "destination-point": "Helmuga-puntua",
     "destination-warehouse": "Biltegi jasotzailea",
     "detail": "Xehetasuna",
     "details": "Xehetasunak",
@@ -803,6 +806,7 @@
     "in-progress": "Aurrera doan",
     "in-stock": "Stockean",
     "inactive": "Ez-aktibo",
+    "incidents": "Gorabeherak",
     "income-and-expenses": "Diru-sarrerak eta gastuak",
     "incompatible-document": "Dokumentu inkonpatibela: %code%. Bezeroa, hornitzailea edo moneta desberdina.",
     "incompatible-with-facturascripts": "FacturaScripts %version% bertsioarekin ez da bateragarria",
@@ -1221,6 +1225,9 @@
     "php-support-end": "PHP %current%-(r)en laguntza laster amaituko da. PHP %min% bertsiora eguneratu mesedez.",
     "php-version-too-new": "%min_version% eta %max_version% artean PHP bertsio bat erabiltzea gomendatzen da. Une honetan, %version% duzu.",
     "physical-stock": "Stock fisikoa",
+    "pick-up-flight-id": "Bilketa hegaldia",
+    "pick-up-flight-time": "Jasotzeko hegaldiaren ordua",
+    "pick-up-point": "Bilketa puntua",
     "picking": "Picking",
     "plan": "Plana",
     "please-enter-value": "Mesedez, eremuan balio bat sartu",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Bilatu mezua",
     "search-product": "Produktua bilatu",
+    "seats": "Lekuak",
     "second-hand": "Bigarren eskukoa",
     "second-quarter": "2. hiruhilekoa",
     "second-trimester": "Bigarren hiruhilekoa",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Idazpen okerra",
     "unchecked": "Egiaztatu gabe",
     "under-minimums": "Minimoaren azpitik",
+    "underbook": "Azpierreserba",
     "undo": "Desegin",
     "unit": "Unitatea",
     "unit-profit": "Mozkin unitarioa",
