--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -68,6 +68,7 @@
     "adult": "Adulte",
     "advanced": "Avancé",
     "age": "Âge",
+    "agency": "Agence",
     "agent": "Agent",
     "agent-commission-info": "Cela s'appliquera uniquement à l'agent sélectionné",
     "agent-dont-have-associated-supplier": "L'agent ne possède pas de fournisseur attitré",
@@ -175,6 +176,7 @@
     "blocked-date": "Bloqué à",
     "body": "Body",
     "book": "Réserve",
+    "booking": "Réservation",
     "box-closed-ok": "Boîte fermée correctement",
     "boxes": "Boîtes",
     "browse": "Parcourir",
@@ -475,6 +477,7 @@
     "description3": "Description 3",
     "design": "Diseño",
     "destination": "Destination",
+    "destination-point": "Point de destination",
     "destination-warehouse": "Entrepôt de destination",
     "detail": "Détail",
     "details": "Détails",
@@ -803,6 +806,7 @@
     "in-progress": "En cours",
     "in-stock": "En stock",
     "inactive": "Inactif",
+    "incidents": "Incidents",
     "income-and-expenses": "Recettes et dépenses",
     "incompatible-document": "Document incompatible : %code%. Client, fournisseur, devise ou entrepôt différent.",
     "incompatible-with-facturascripts": "Incompatible avec FacturaScripts %version%",
@@ -1221,6 +1225,9 @@
     "php-support-end": "Le support pour PHP %current% sera bientôt terminé. Veuillez mettre à jour PHP vers la version %min% ou ultérieure.",
     "php-version-too-new": "Il est recommandé d'utiliser une version de PHP entre %min_version% et %max_version%. Vous avez actuellement la %version%",
     "physical-stock": "Stock physique",
+    "pick-up-flight-id": "Vol de ramassage",
+    "pick-up-flight-time": "Heure du vol de ramassage",
+    "pick-up-point": "Point de retrait",
     "picking": "Préparation de commandes",
     "plan": "Plan",
     "please-enter-value": "Entrer un nombre, SVP",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "Rechercher dans toutes les pages du programme",
     "search-message": "Message de recherche",
     "search-product": "Rechercher un produit",
+    "seats": "Places",
     "second-hand": "Seconde main",
     "second-quarter": "2ème trimestre",
     "second-trimester": "Second trimestre",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Siège non ajusté",
     "unchecked": "Non vérifié",
     "under-minimums": "Sous les minima",
+    "underbook": "Sous-réserve",
     "undo": "annuler",
     "unit": "Unité",
     "unit-profit": "Bénéfice à l'unité",
