--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -68,6 +68,7 @@
     "adult": "Adulto",
     "advanced": "Avanzado",
     "age": "idade",
+    "agency": "Axencia",
     "agent": "Axente",
     "agent-commission-info": "Só se aplicará ao axente seleccionado",
     "agent-dont-have-associated-supplier": "O axente non ten un provedor asociado",
@@ -175,6 +176,7 @@
     "blocked-date": "Data de bloqueo",
     "body": "Corpo",
     "book": "Reservar",
+    "booking": "Reserva",
     "box-closed-ok": "Caixa pechada correctamente",
     "boxes": "Cajas",
     "browse": "Examinar",
@@ -475,6 +477,7 @@
     "description3": "Descrición 3",
     "design": "Deseño",
     "destination": "Destino",
+    "destination-point": "Punto de destino",
     "destination-warehouse": "Almacén de destino",
     "detail": "Detalle",
     "details": "Detalles",
@@ -803,6 +806,7 @@
     "in-progress": "En progreso",
     "in-stock": "En stock",
     "inactive": "Inactivo",
+    "incidents": "Incidencias",
     "income-and-expenses": "Ingresos e Gastos",
     "incompatible-document": "Documento incompatible: %code%. Distinto cliente, provedor, divisa ou almacén.",
     "incompatible-with-facturascripts": "Incompatible coa versión %version% de FacturaScripts",
@@ -1221,6 +1225,9 @@
     "php-support-end": "O soporte para PHP %current% rematará pronto. Por favor, actualiza PHP á versión %min% ou superior.",
     "php-version-too-new": "Recoméndase usar unha versión de PHP entre a %min_version% e a %max_version%. Actualmente tes a %version%",
     "physical-stock": "Accións físicas",
+    "pick-up-flight-id": "Voo de recollida",
+    "pick-up-flight-time": "Tempo de voo de recollida",
+    "pick-up-point": "Punto de recollida",
     "picking": "Recollida",
     "plan": "Plan",
     "please-enter-value": "Por favor, introduza un valor",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "Buscar en todas as páxinas do programa",
     "search-message": "Procurar mensaxe",
     "search-product": "Buscar produto",
+    "seats": "Prazas",
     "second-hand": "Segunda man",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Asento descuadrado",
     "unchecked": "Non comprobado",
     "under-minimums": "Baixo mínimos",
+    "underbook": "Subreserva",
     "undo": "Desfacer",
     "unit": "Unidade",
     "unit-profit": "Beneficio unit.",
