--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -68,6 +68,7 @@
     "adult": "Adulto",
     "advanced": "Avanzado",
     "age": "età",
+    "agency": "Agenzia",
     "agent": "Agente",
     "agent-commission-info": "agente-commissione-info",
     "agent-dont-have-associated-supplier": "agente-non-ha-fornitori-affiliati",
@@ -175,6 +176,7 @@
     "blocked-date": "Bloccato a",
     "body": "Corpo",
     "book": "Prenota",
+    "booking": "Prenotazione",
     "box-closed-ok": "Scatola chiusa correttamente",
     "boxes": "Scatole",
     "browse": "Navigare",
@@ -475,6 +477,7 @@
     "description3": "Descrizione 3",
     "design": "Design",
     "destination": "Destinazione",
+    "destination-point": "Punto di destinazione",
     "destination-warehouse": "Magazzino di Destinazione",
     "detail": "dettaglio",
     "details": "Dettagli",
@@ -803,6 +806,7 @@
     "in-progress": "In corso",
     "in-stock": "Disponibile",
     "inactive": "inattivo",
+    "incidents": "Incidenti",
     "income-and-expenses": "Ingressi e Uscite",
     "incompatible-document": "Documento incompatibile: %code%. Per raggruppare i documenti devono avere lo stesso cliente o fornitore, serie, magazzino, valuta e sconti globali.",
     "incompatible-with-facturascripts": "Incompatibile con la versione %version% di FacturaScripts",
@@ -1221,6 +1225,9 @@
     "php-support-end": "Il supporto per PHP %current% terminerà presto. Si prega di aggiornare PHP alla versione %min% o superiore.",
     "php-version-too-new": "Si raccomanda di utilizzare una versione di PHP tra la %min_version% e la %max_version%. Attualmente hai la %version%",
     "physical-stock": "Stock fisico",
+    "pick-up-flight-id": "Volo di ritiro",
+    "pick-up-flight-time": "Orario di prelievo del volo",
+    "pick-up-point": "Punto di ritiro",
     "picking": "Selezione",
     "plan": "Piano",
     "please-enter-value": "Per favore inserisci un valore",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "Cerca in tutte le pagine del programma",
     "search-message": "Cerca messaggio",
     "search-product": "Cerca prodotto",
+    "seats": "Posti",
     "second-hand": "Di seconda mano",
     "second-quarter": "Secondo trimestre",
     "second-trimester": "Secondo trimestre",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Prenotazione non bilanciata",
     "unchecked": "Non verificato",
     "under-minimums": "Sotto minimi",
+    "underbook": "Sottoriserva",
     "undo": "Disfare",
     "unit": "Unità",
     "unit-profit": "Profitto unit.",
