--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -68,6 +68,7 @@
     "adult": "Dorosły",
     "advanced": "Zaawansowane",
     "age": "wiek",
+    "agency": "Agencja",
     "agent": "Agent",
     "agent-commission-info": "Dotyczy tylko wybranego agenta",
     "agent-dont-have-associated-supplier": "Agent nie ma powiązanego dostawcy",
@@ -175,6 +176,7 @@
     "blocked-date": "Data blokady",
     "body": "Treść",
     "book": "Rezerwuj",
+    "booking": "Rezerwacja",
     "box-closed-ok": "Kasa została prawidłowo zamknięta",
     "boxes": "Pudełka",
     "browse": "Examinar",
@@ -475,6 +477,7 @@
     "description3": "Opis 3",
     "design": "Projektowanie",
     "destination": "Cel",
+    "destination-point": "Punkt docelowy",
     "destination-warehouse": "Magazyn docelowy",
     "detail": "Szczegóły",
     "details": "Detalles",
@@ -803,6 +806,7 @@
     "in-progress": "W trakcie",
     "in-stock": "Na magazynie",
     "inactive": "Nieaktywny",
+    "incidents": "Incidencias",
     "income-and-expenses": "Przychody i wydatki",
     "incompatible-document": "Dokument niezgodny: %code%. Aby móc grupować dokumenty, muszą mieć tego samego klienta lub dostawcę, serię, magazyn, walutę i łączne rabaty.",
     "incompatible-with-facturascripts": "Niekompatybilne z wersją %version% FacturaScripts",
@@ -1221,6 +1225,9 @@
     "php-support-end": "Wsparcie dla PHP %current% wkrótce się kończy. Proszę zaktualizować PHP do wersji %min% lub wyższej.",
     "php-version-too-new": "Zaleca się użycie wersji PHP pomiędzy %min_version% a %max_version%. Obecnie masz %version%",
     "physical-stock": "Alyz fizyczny",
+    "pick-up-flight-id": "Lot odbioru",
+    "pick-up-flight-time": "Godzina lotu odbioru",
+    "pick-up-point": "Punkt odbioru",
     "picking": "Kompletacja",
     "plan": "Plan",
     "please-enter-value": "Proszę wprowadzić wartość dla pola",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Szukaj wiadomości",
     "search-product": "Szukaj produktu",
+    "seats": "Miejsca",
     "second-hand": "Używane",
     "second-quarter": "2 kwartał",
     "second-trimester": "Drugi trymestr",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Niezweryfikowany",
     "under-minimums": "Poniżej minimum",
+    "underbook": "Subrezerwacja",
     "undo": "Cofnij",
     "unit": "Jednostka",
     "unit-profit": "Zysk jednostkowy",
