--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -68,6 +68,7 @@
     "adult": "Adulto",
     "advanced": "Avançado",
     "age": "idade",
+    "agency": "Agência",
     "agent": "Agente",
     "agent-commission-info": "agente-comissão-informação",
     "agent-dont-have-associated-supplier": "agente-não-tem-associado-fornecedor",
@@ -175,6 +176,7 @@
     "blocked-date": "Data bloqueada",
     "body": "Corpo",
     "book": "Reservar",
+    "booking": "Reserva",
     "box-closed-ok": "Caixa fechada corretamente",
     "boxes": "Caixas",
     "browse": "Navegar",
@@ -475,6 +477,7 @@
     "description3": "Descrição 3",
     "design": "Design",
     "destination": "Destino",
+    "destination-point": "Ponto de destino",
     "destination-warehouse": "Armazém de destino",
     "detail": "Detalhe",
     "details": "Detalhes",
@@ -803,6 +806,7 @@
     "in-progress": "Em andamento",
     "in-stock": "Em estoque",
     "inactive": "Inativo",
+    "incidents": "Incidentes",
     "income-and-expenses": "Receitas e Despesas",
     "incompatible-document": "Documento incompatível: %code%. Para agrupar documentos, eles devem ter o mesmo cliente ou fornecedor, série, armazém, moeda e descontos globais.",
     "incompatible-with-facturascripts": "Não é compatível com FacturaScripts %version%",
@@ -1221,6 +1225,9 @@
     "php-support-end": "p",
     "php-version-too-new": "Recomenda-se usar uma versão do PHP entre %min_version% e %max_version%. Atualmente, tem a %version%",
     "physical-stock": "Estoque físico",
+    "pick-up-flight-id": "Voo de recolha",
+    "pick-up-flight-time": "Hora do voo de recolha",
+    "pick-up-point": "Ponto de coleta",
     "picking": "Separação",
     "plan": "Plano",
     "please-enter-value": "Por favor, insira um valor",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "Pesquisar em todas as páginas do programa",
     "search-message": "Buscar mensagem",
     "search-product": "Buscar produto",
+    "seats": "Assentos",
     "second-hand": "Segunda mão",
     "second-quarter": "2.º trimestre",
     "second-trimester": "Segundo Trimestre",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Lançamento desequilibrado",
     "unchecked": "Sem checar",
     "under-minimums": "Abaixo do mínimo",
+    "underbook": "Subreservas",
     "undo": "Desfazer",
     "unit": "Unidade",
     "unit-profit": "lucro unitário",
