--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -68,6 +68,7 @@
     "adult": "Adult",
     "advanced": "Avançat",
     "age": "edat",
+    "agency": "Agència",
     "agent": "Agent",
     "agent-commission-info": "Només s'aplicarà a l'agent seleccionat",
     "agent-dont-have-associated-supplier": "L'agent no té un proveïdor associat",
@@ -175,6 +176,7 @@
     "blocked-date": "Bloquejat el",
     "body": "Body",
     "book": "Reservar",
+    "booking": "Reserva",
     "box-closed-ok": "Caixa tancada correctament",
     "boxes": "Caixes",
     "browse": "Navegar",
@@ -475,6 +477,7 @@
     "description3": "Descripció 3",
     "design": "Disseny",
     "destination": "Destí",
+    "destination-point": "Punt de destinació",
     "destination-warehouse": "Almagasén de destí",
     "detail": "Detall",
     "details": "Detalls",
@@ -803,6 +806,7 @@
     "in-progress": "En progrés",
     "in-stock": "En estoc",
     "inactive": "inactive",
+    "incidents": "Incidències",
     "income-and-expenses": "Ingressos i Despeses",
     "incompatible-document": "Document incompatible: %code%. Diferent client, proveïdor o divisa.",
     "incompatible-with-facturascripts": "Incompatible en la versió %version%  de FacturaScripts",
@@ -1221,6 +1225,9 @@
     "php-support-end": "El suport per a PHP  %current% acabarà pronte. Per favor, actualitza PHP a la versió %min% o superior.",
     "php-version-too-new": "Es recomana usar una versió de PHP entre la %min_version% i la %max_version%. Actualment tens la %version%",
     "physical-stock": "Estoc físic",
+    "pick-up-flight-id": "Vol de recollida",
+    "pick-up-flight-time": "Hora vol de recollida",
+    "pick-up-point": "Punt de recollida",
     "picking": "Recollida",
     "plan": "Pla",
     "please-enter-value": "Per favor, introduïx un valor en el camp",
@@ -1420,6 +1427,7 @@
     "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Cercar missatge",
     "search-product": "Search product",
+    "seats": "Plazas",
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
@@ -1688,6 +1696,7 @@
     "unbalanced-entry": "Asentament desequilibrat",
     "unchecked": "Sense comprovar",
     "under-minimums": "under-minimums",
+    "underbook": "Subreserva",
     "undo": "Desfés",
     "unit": "Unitat",
     "unit-profit": "unit-profit",
